fix listitem's height on mobile

--- a/src/SoundList/SoundList.css
+++ b/src/SoundList/SoundList.css
@@ -19,6 +19,7 @@
   cursor: pointer;
   border-bottom: 1px dotted grey;
   display: flex;
+  min-height: 60px;
 }
 
 .Lista-Item:hover {
